2012-04-05  simleo  <simleo@simleo-U36SD>

	* bl/core/messages: added KinshipVectors.

	* bl/core/gt/kinship/__init__.py: refactored to allow for easier
	MapReducing.

2012-03-07  simleo  <simleo@simleo-U36SD>

	* bl/core/seq/engines/blastall_2_2_21.py (Engine.blastall): fixed
	filter option adjustment.

2011-10-28    <simleo@neuron.crs4.it>

	* bl/core/messages/Dummy.py (Encoder.encode): changed to take
	separate parameters instead of a tuple.

	* bl/core/io/message_stream.py (MessageStreamWriter.write):
	changed to accept either a mapping or a tuple as payload.

2011-09-27    <zag@manzanillo>

	* bl/core/io/message_stream.py (MessageStreamWriter.write): Now we
	magically convert dict to whatever arguments the payload encode expects.

2011-09-19    <simleo@neuron.crs4.it>

	* bl/core/seq/align/mapping.py (SAMMapping): changed to return
	1-based positions.

2011-09-16    <simleo@neuron.crs4.it>

	* test/seq/align/test_mapping.py: added a class for storing SAM
	records.

2011-09-04    <zag@manzanillo>

	* bl/core/gt/messages/SampleSnpCall.py: Added a message to encode
	SnpCall on a sample.

2011-09-03    <zag@manzanillo>

	* bl/core/io/message_stream.py (MessageStreamWriter): Added a
	class to write sequences of messages to a stream (a file for the
	time being).
	(MessageStreamReader): Added a class to read sequences of messages
	from a stream (a file for the time being).

	* bl/core/messages/MessageStreamHeader.py: Added a
	MessageStreamHeader object.

	* bl/core/messages/registry.py (MessageCodecInfo): added a naive
	facility for Message Codecs management.

	* Makefile (PROTOBUF_SRC_DIRS): Added support for protobuf proto files
	compiling.

	* bl/core/io/blob_stream.py (BlobStream): Added a class to manage
	the writing of a sequence of strings blobs to a file.

2011-09-02    <zag@manzanillo>

	* bl/core/io/abi.py: Moved from readers to io. Deleted 'readers'

2011-08-30    <zag@manzanillo>

	* bl/core/readers/abi.py (SDSReader): Added a class to read Abi